--- a/.github/workflows/docker-publish-qubership-build-envgene.yml
+++ b/.github/workflows/docker-publish-qubership-build-envgene.yml
@@ -42,5 +42,4 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            GIT_USER=${{ github.actor }}
-            GIT_TOKEN=${{ secrets.GITHUB_TOKEN }}
+            GH_ACCESS_TOKEN=${{ secrets.GH_ACCESS_TOKEN }}
