--- a/.github/workflows/docker-publish-qubership-build-envgene.yml
+++ b/.github/workflows/docker-publish-qubership-build-envgene.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Debug Token Permissions
         run: |
           echo "Token permissions:"
-          curl -u $GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }} https://ghcr.io/v2/
+          curl -u ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} https://ghcr.io/v2/
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
