--- a/.github/workflows/docker-publish-qubership-build-envgene.yml
+++ b/.github/workflows/docker-publish-qubership-build-envgene.yml
@@ -19,11 +19,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Debug Token Permissions
-        run: |
-          echo "Token permissions:"
-          curl -u ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} https://ghcr.io/v2/
-
       - name: Log in to the Container registry
         uses: docker/login-action@v3
         with:
@@ -47,4 +42,5 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            GH_ACCESS_TOKEN=${{ secrets.GH_ACCESS_TOKEN }}
+            GIT_USER=${{ secrets.GIT_USER }}
+            GIT_TOKEN=${{ secrets.GIT_TOKEN }}
