--- a/.github/workflows/docker-publish-qubership-build-envgene.yml
+++ b/.github/workflows/docker-publish-qubership-build-envgene.yml
@@ -22,9 +22,9 @@ jobs:
       - name: Log in to the Container registry
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${GITHUB_ACTOR}
+          password: ${{secrets.GITHUB_TOKEN}}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
@@ -42,5 +42,4 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            GIT_USER=${{ secrets.GIT_USER }}
-            GIT_TOKEN=${{ secrets.GIT_TOKEN }}
+            GH_ACCESS_TOKEN=${{ secrets.GH_ACCESS_TOKEN }}
