--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,35 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.qubership</groupId>
     <artifactId>qubership_envgene_templates</artifactId>
     <version>${revision}</version>
-    <packaging>jar</packaging>
 
-    <name>Qubership Envgene Templates</name>
-    <description>A Maven artifact that contains templates for Qubership Envgene Instance</description>
+    <name>${project.groupId}:${project.artifactId}</name>
+    <description>>A Maven artifact that contains templates for Qubership Envgene Instance</description>
+    <url>https://github.com/Netcracker/qubership-envgene</url>
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
+        </license>
+    </licenses>
+    <developers>
+        <developer>
+            <name>Netcracker</name>
+            <email>opensourcegroup@netcracker.com</email>
+            <organization>Netcracker Technology</organization>
+            <organizationUrl>https://www.netcracker.com</organizationUrl>
+        </developer>
+    </developers>
+    <scm>
+        <connection>scm:git:git://github.com/Netcracker/qubership-envgene.git</connection>
+        <developerConnection>scm:git:ssh://github.com:Netcracker/qubership-envgene.git</developerConnection>
+        <url>https://github.com/Netcracker/qubership-envgene/tree/main</url>
+    </scm>
 
     <distributionManagement>
         <repository>
