Updated the ansible

--- a/build_envgene/ansible/roles/build_env/tasks/02_prepare_vars_new.yaml
+++ b/build_envgene/ansible/roles/build_env/tasks/02_prepare_vars_new.yaml
@@ -36,7 +36,7 @@
     version: "{{ template_split[1] }}"
     username: "{{ repository_username }}"
     password: "{{ repository_password }}"
-    extension: json
+    extension: zip
   no_log: false
   register: discovery_output
 
