QBRSHP-0000. Updating the logic.

--- a/build_envgene/ansible/roles/build_env/tasks/04_execute_script.yaml
+++ b/build_envgene/ansible/roles/build_env/tasks/04_execute_script.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Prepare script arguments
   set_fact:
-    script_args: "-e {{ environment_name }} -c {{ cluster_name }} -o {{ base_dir }}/environments -t {{ build_env_path }}/templates -i {{ base_dir }}/environments -k {{ atrifact_latest_version }}"
+    script_args: "-e {{ environment_name }} -c {{ cluster_name }} -o {{ base_dir }}/environments -t {{ build_env_path }}/templates -i {{ base_dir }}/environments -k {{ atrifact_latest_version | default(version)}}"
 
 - name: Log script args
   debug:
