--- a/.github/workflows/docker_publish_release.yml
+++ b/.github/workflows/docker_publish_release.yml
@@ -15,9 +15,9 @@ on:
         description: 'Dry run'
       component:
         default: '[
-                  {"name": "qubership-build-envgene", "file": "./build_envgene/build/Dockerfile", "context": "."},
-                  {"name": "qubership-build-gcip", "file": "./build_gcip/build/Dockerfile", "context": "."},
-                  {"name": "qubership-build-effective-set-generator", "file": "./build_effective_set_generator/build/Dockerfile", "context": "."}
+                  {"name": "qubership-envgene", "file": "./build_envgene/build/Dockerfile", "context": "."},
+                  {"name": "qubership-gcip", "file": "./build_gcip/build/Dockerfile", "context": "."},
+                  {"name": "qubership-effective-set-generator", "file": "./build_effective_set_generator/build/Dockerfile", "context": "."}
                 ]'
         description: 'component'
         required: true
