--- a/.github/workflows/docker-build-qubership-gcip.yml
+++ b/.github/workflows/docker-build-qubership-gcip.yml
@@ -1,4 +1,4 @@
-name: Create and publish qubership-build-gcip docker image
+name: Create and publish qubership-gcip docker image
 
 on:
   workflow_dispatch:
