Adding the logic to keep the data

--- a/env-builder/roles/generate_solution_structure/tasks/prepare_solution_structure_variable.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/prepare_solution_structure_variable.yaml
@@ -25,6 +25,16 @@
         {{- '' -}}
       {%- endif -%}
 
+- name: Update environments data
+  set_fact:
+    all_environments: >-
+      {{
+        all_environments | combine(
+          {template_path: {}},
+          recursive=true
+        )
+      }}
+
 - name: Transform applications
   set_fact:
     all_environments: >-
