Adding the logic to keep the data

--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -53,7 +53,21 @@
     applications: "{{ sd_config.applications }}"
   when: sd_file_existence.stat.exists
 
+- name: Merge all applications
+  set_fact:
+    merged_apps: >-
+      {%
+        set result = {} %
+        for env in all_environments.values() %
+          for app_name, app_data in env.items() %
+            set _ = result.update({app_name: app_data}) %
+          endfor %
+        endfor %
+        result
+      %}
+  when: sd_file_existence.stat.exists
+
 - name: Show all transformed data
   debug:
-    var: all_environments
+    var: merged_apps
   when: sd_file_existence.stat.exists
