--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -53,13 +53,14 @@
     applications: "{{ sd_config.applications }}"
   when: sd_file_existence.stat.exists
 
-- name: Merge applications from all environments
+- name: Merge apps with env prefixes
   set_fact:
     merged_apps: >-
       {%- set result = {} -%}
-      {%- for env in all_environments.values() -%}
-        {%- for app_name, app_data in env.items() -%}
-          {%- set _ = result.update({app_name: app_data}) -%}
+      {%- for env_path, env_data in all_environments.items() -%}
+        {%- set env_name = env_path | basename | splitext | first -%}
+        {%- for app_name, app_data in env_data.items() -%}
+          {%- set _ = result.update({unique_key: app_data}) -%}
         {%- endfor -%}
       {%- endfor -%}
       {{ result }}
