--- a/env-builder/roles/generate_solution_structure/tasks/prepare_solution_structure_variable.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/prepare_solution_structure_variable.yaml
@@ -18,9 +18,9 @@
   set_fact:
     current_namespace: >-
       {%- set content = lookup('file', template_path).split('\n') -%}
-      {%- set ns_line = content | select('match', '^name:') | list | first -%}
+      {%- set ns_line = content | select('match', '^\\s*name:') | list | first -%}
       {%- if ns_line -%}
-        {{- ns_line.split('name:', 1)[1] | trim -}}
+        {{- ns_line.split(':', 1)[1] | trim | replace('"', '') -}}
       {%- else -%}
         {{- '' -}}
       {%- endif -%}
