--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -60,6 +60,7 @@
       {%- for env_path, env_data in all_environments.items() -%}
         {%- set env_name = env_path | basename | splitext | first -%}
         {%- for app_name, app_data in env_data.items() -%}
+          {%- set unique_key = app_name -%}
           {%- set _ = result.update({unique_key: app_data}) -%}
         {%- endfor -%}
       {%- endfor -%}
