--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -56,11 +56,12 @@
 - name: Merge apps with env prefixes
   set_fact:
     merged_apps: >-
+      {%- set result = {} -%}
       {%- for env_path, env_data in all_environments.items() -%}
         {%- set env_name = env_path | basename | splitext | first -%}
         {%- for app_name, app_data in env_data.items() -%}
           {%- set unique_key = app_name -%}
-          {%- set _ = result.update({unique_key: app_data}) -%}
+          {%- set _ = result.update({ unique_key: app_data }) -%}
         {%- endfor -%}
       {%- endfor -%}
       {{ result }}
