Working on fixes for newly added role

--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -53,6 +53,20 @@
     applications: "{{ sd_config.applications }}"
   when: sd_file_existence.stat.exists
 
+- name: Merge apps with env prefixes
+  set_fact:
+    merged_apps: >-
+      {%- set result = {} -%}
+      {%- for env_path, env_data in all_environments.items() -%}
+        {%- set env_name = env_path | basename | splitext | first -%}
+        {%- for app_name, app_data in env_data.items() -%}
+          {%- set unique_key = app_name -%}
+          {%- set _ = result.update({unique_key: app_data}) -%}
+        {%- endfor -%}
+      {%- endfor -%}
+      {{ result }}
+  when: sd_file_existence.stat.exists
+
 - name: Show all transformed data
   debug:
     var: all_environments
