Adding new variable for debug

--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -69,5 +69,5 @@
 
 - name: Show all transformed data
   debug:
-    var: all_environments
+    var: merged_apps
   when: sd_file_existence.stat.exists
