Feature/add composite structure (#23)
* Adding Compsite Structure

* fixing template for composite structure

---------

Co-authored-by: jara1022 <jackson.raj@netcracker.com>

--- a/env-builder/main.yaml
+++ b/env-builder/main.yaml
@@ -128,8 +128,8 @@
         _tenant: "{{ tenant }}"
         _cloud: "{{ current_env.cloud }}"
         _current_env_dir: "{{ current_env_dir }}"
-        _template: "{{current_env_template.tenant}}"
-
+        _template: "{{current_env_template.composite_structure}}"
+        
     - name: Generate environment specific schema
       ansible.builtin.copy:
         src: "{{ current_env_template.envSpecificSchema }}"
