--- a/env-builder/roles/generate_solution_structure/tasks/prepare_solution_structure_variable.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/prepare_solution_structure_variable.yaml
@@ -17,12 +17,13 @@
 - name: Extract Namespace
   set_fact:
     current_namespace: >-
-      {%- set content = lookup('template', template_path) | string -%}
-      {%- set ns_line = content | regex_search('name:\\s*"(.*)"') -%}
+      {%- set content = lookup('file', template_path).split('\n') -%}
+      {%- set ns_line = content | select('match', '^\\s*name:') | list | first -%}
       {%- if ns_line -%}
-        {{- ns_line[1] -}}
+        {%- set raw_ns = ns_line.split(':', 1)[1] | trim | replace('"', '') -%}
+        {{ raw_ns | regex_replace(r'{{\s*([^}\s]+)\s*}}', r'{{ \1 }}') }}
       {%- else -%}
-        {{- '' -}}
+        {{ '' }}
       {%- endif -%}
 
 - name: Initialize environment entry
