Adding the logic to keep the data

--- a/env-builder/roles/generate_solution_structure/tasks/prepare_solution_structure_variable.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/prepare_solution_structure_variable.yaml
@@ -54,3 +54,10 @@
         {%- endif -%}
       {%- endfor -%}
       {{ ns.result }}
+
+- name: Show template content nicely
+  debug:
+    msg: |
+      === TEMPLATE CONTENT ===
+      {{ lookup('file', template_path) }}
+      ========================
