Adding the logic to keep the data

--- a/env-builder/roles/generate_namespaces/tasks/main.yaml
+++ b/env-builder/roles/generate_namespaces/tasks/main.yaml
@@ -12,6 +12,10 @@
     template_override: "{{ namespace.template_override | default('') }}"
 
 
+- name: Print solution_structure
+  debug:
+    var: _solution_structure
+
 - name: Skip rendering if solution_structure is empty
   set_fact:
     _rendered_solution_structure: {}
